--- a/AquaNet/css/foro.css
+++ b/AquaNet/css/foro.css
@@ -20,7 +20,6 @@ body {
 }
  
 .encabezado .contenedor {
-    max-width: 1400px;
     margin: 0 auto;
     padding: 0 2rem;
     display: flex;
@@ -29,10 +28,19 @@ body {
 }
  
 .logo {
-    color: #2563eb;
     font-size: 1.8rem;
     font-weight: 700;
     margin: 0;
+    font-family: 'Fascinate';
+}
+
+.aqua{
+    color: #68a5f0;
+    padding-left: 10px;
+}
+
+.net{
+    color: #2b568f;
 }
  
 .navegacion {
@@ -50,24 +58,31 @@ body {
 }
  
 .navegacion a.activo {
-    border-bottom-color: #333;
+    border-bottom-color: #2563eb;
 }
  
 .navegacion a:hover {
     color: #2563eb;
+    border-bottom-color: #2563eb;
 }
  
+.return-home {
+    text-decoration: none;
+}
 .menu-usuario {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 20px;
 }
  
 .icono-usuario {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    border: 2px solid #333;
+    border: 2px solid #333333;
     background: white;
 }
  
