--- a/AquaNet/css/monitoreo.css
+++ b/AquaNet/css/monitoreo.css
@@ -286,6 +286,114 @@ body {
     transform: translateY(-2px);
     box-shadow: 0 6px 10px rgba(0,0,0,0.15);
 }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.45);
+    /*backdrop-filter: blur(3px);*/
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+.modal-contenido {
+   background: #eef1fb;
+    padding: 25px 30px;
+    border-radius: 20px;
+    width: 420px;
+    max-height: 88vh;
+    overflow-y: auto;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+    position: relative;
+    animation: fadeIn 0.25s ease-out;
+}
+@keyframes fadeIn {
+    from { transform: scale(0.95); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+}
+
+.cerrar {
+    position: absolute;
+    right: 18px;
+    top: 12px;
+    font-size: 26px;
+    font-weight: bold;
+    color: #666;
+    cursor: pointer;
+}
+
+.cerrar:hover {
+    color: #000;
+}
+
+.modal-contenido h2 {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #333;
+}
+
+.modal-contenido label {
+    font-size: 14px;
+    font-weight: 600;
+    color: #444;
+}
+
+.modal-contenido input[type="text"],
+.modal-contenido input[type="email"],
+.modal-contenido input[type="tel"],
+.modal-contenido input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #d0d0d0;
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-size: 14px;
+    background-color: #fafafa;
+}
+
+.modal-contenido input:focus {
+    outline: none;
+    border-color: #5b9fff;
+    box-shadow: 0 0 4px rgba(91,159,255,0.4);
+}
+
+.modal-contenido input[type="checkbox"] {
+    transform: scale(1.2);
+    margin-right: 6px;
+}
+
+.boton-enviar {
+    width: 100%;
+    padding: 12px;
+    background: #5b9fff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 12px;
+    font-size: 16px;
+    margin-top: 10px;
+   /* transition: background 0.2s ease-in-out;*/
+}
+
+.boton-enviar:hover {
+    background: #3d7de0;
+}
+select,
+textarea {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #bbb;
+    padding: 8px;
+    margin-bottom: 15px;
+}
 
 @media (max-width: 1024px) {
     .grilla-resenas {
