--- a/AquaNet/css/foroActualizado.css
+++ b/AquaNet/css/foroActualizado.css
@@ -473,28 +473,27 @@ body {
     transform: translateY(-2px) scale(1.02);
 }
  
-.btn-caudal {
-    bottom: 10rem;
-    background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
-    color: white;
+.mostrarMas{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
 }
  
-.btn-caudal:hover {
-    background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%);
+.mostrarMas a{
+    text-decoration: none;
+    color: #314b28;
 }
- 
-.btn-reportar {
-    bottom: 2.5rem;
-    background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
-    color: white;
-    animation: pulse 2s ease-in-out infinite;
+
+.mostrarMas a:hover{
+    text-decoration: underline #314b28;;
 }
- 
-.btn-reportar:hover {
-    background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%);
-    animation: none;
+
+.semiNav {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 2rem;
 }
- 
+
 @keyframes pulse {
     0%, 100% {
         box-shadow: 0 6px 20px rgba(239, 68, 68, 0.4);
