--- a/AquaNet/css/foroActualizado.css
+++ b/AquaNet/css/foroActualizado.css
@@ -135,22 +135,22 @@ body {
 }
  
 .btn-agregar-publicacion {
-    /*position: absolute;*/
-    position: fixed;
-    top: 32rem;
+    position: absolute; 
+    bottom: 1.5rem;
     right: 1.5rem;
-    width: 50px;
-    height: 50px;
+    padding: 10px 18px;
+    width: auto; 
+    height: auto;
     background: #3b82f6;
     border: none;
-    border-radius: 50%;
+    border-radius: 30px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 8px; 
     box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);
     transition: all 0.3s ease;
-    z-index: 9999;
+    z-index: 10;
 }
  
 .btn-agregar-publicacion:hover {
@@ -162,7 +162,13 @@ body {
 .btn-agregar-publicacion img {
     width: 20px;
     height: 20px;
-    filter: brightness(0) invert(1);
+}
+.btn-agregar-publicacion p {
+    margin: 0;
+    padding: 0;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    font-size: 14px;
 }
  
 .barra-superior {
