--- a/AquaNet/css/botonesFlotantes.css
+++ b/AquaNet/css/botonesFlotantes.css
@@ -48,8 +48,8 @@
 }
 
 .btn-cortes {
-    height: 55px;
-    background-color: #79c8ff;
+    height: 65px;
+    background-color: #f5a346;
     color: white;
     border: none;
     padding: 12px 20px;
